[package]
name = "escuell"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "escuell"
path = "src/bin/ui.rs"

[dependencies]
postgres = { version = "0.19.7", features = ["with-uuid-1", "with-chrono-0_4"] }
ratatui = { version = "0.25.0", features = ["all-widgets"] }
crossterm = "0.27.0"
serde_json = "1.0.108"
dirs = "5.0.1"
serde = { version = "1.0.193", features = ["derive"] }
rayon = "1.8.0"
mdsn = "0.2.22"
anyerror = "0.1.12"
anyhow = "1.0.76"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = "0.4.31"

